2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security.h (security_driver): Add data_encrypt and
						   data_decrypt function.
	* common-src/bsd-security.c, common-src/bsdtcp-security.c,
	  common-src/bsdudp-security.c, common-src/krb4-security.c,
	  common-src/rsh-security.c,
	  common-src/ssh-security.c: Set data_encrypt and data_decrypt to NULL.

	* common-src/conffile.c: Parse KRB5KEYTAB and KRB5PRINCIPAL on client.
	* common-src/krb5-security.c: Complete rewrite.
	* common-src/security-util.h: Change many prototype.
	* common-src/security-util.c: Change argument to function.
	* recover-src/amrecover.c: Use generic_client_get_security_conf.
	* recover-src/extract_list.c: Use generic_client_get_security_conf.

2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	Merge from zmanda EXT.
	- Add SS_INIT, SS_SET_INADDR_ANY, SS_GET_PORT and SS_SET_PORT
	  macros for IPv6 portability
	- add SS_LEN() macro for calculating length of a
	  struct sockaddr, use it in a few locations where incorrect
	  lengths were being passed.
	- New script for rebuilding gnulib from scratch; current
	  gnulib is from 2007-01-05.

2007-03-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/set_commands.c (set_tape): Don't amfree(tape).
	* oldrecover-src/set_commands.c (set_tape): Don't amfree(tape).

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Ouput quoted diskname in "DUMP SUMMARY"
	  section.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/scsi-linux.c, common-src/security-util.c,
	  common-src/stream.c, oldrecover-src/amrecover.c,
	  restore-src/restore.c, server-src/amcheck.c,
	  server-src/taper.c: Use SIZE_T_FMT and SSIZE_T_FMT instead of %z.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Always retry getaddrinfo if INET6 failed.
	* common-src/bsdudp-security.c: Ditto.

2007-02-22  Jean-Louis Martineau <martineau@zmanda.com>